--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "react": "^16.7.0",
     "react-bootstrap": "^1.0.0-beta.4",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-redux": "^6.0.0",
+    "react-scripts": "2.1.3",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
