--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.2.1",
+    "classnames": "^2.2.6",
     "react": "^16.7.0",
     "react-bootstrap": "^1.0.0-beta.4",
     "react-dom": "^16.7.0",
