--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.3",
     "redux": "^4.0.1",
-    "redux-saga": "^1.0.0"
+    "redux-saga": "^1.0.0",
+    "yup": "^0.26.10"
   },
   "scripts": {
     "start": "react-scripts start",
