--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-loading": "^2.0.3",
+    "react-popper": "^1.3.3",
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.3",
     "redux": "^4.0.1",
