--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^4.2.1",
     "classnames": "^2.2.6",
     "formik": "^1.4.3",
+    "object-path-immutable": "^3.0.0",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
@@ -15,6 +16,7 @@
     "react-scripts": "2.1.3",
     "redux": "^4.0.1",
     "redux-saga": "^1.0.0",
+    "selectn": "^1.1.2",
     "yup": "^0.26.10"
   },
   "scripts": {
