--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "^4.2.1",
     "classnames": "^2.2.6",
+    "deep-equal": "^1.0.1",
     "formik": "^1.4.3",
     "object-path-immutable": "^3.0.0",
     "prop-types": "^15.6.2",
