--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "2.1.3",
     "redux": "^4.0.1",
     "redux-saga": "^1.0.0",
+    "schm": "^0.4.1",
     "selectn": "^1.1.2",
     "yup": "^0.26.10"
   },
