--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ajv": "^6.10.0",
     "bootstrap": "^4.2.1",
     "classnames": "^2.2.6",
     "deep-equal": "^1.0.1",
@@ -17,7 +18,6 @@
     "react-scripts": "2.1.3",
     "redux": "^4.0.1",
     "redux-saga": "^1.0.0",
-    "schm": "^0.4.1",
     "selectn": "^1.1.2",
     "yup": "^0.26.10"
   },
