Use URI.resolve() from uri-js library instead of concatenating URLs.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "redux": "^4.0.1",
     "redux-saga": "^1.0.0",
     "selectn": "^1.1.2",
+    "uri-js": "^4.2.2",
     "yup": "^0.26.10"
   },
   "scripts": {
