--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-popper": "^1.3.3",
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.8",
+    "react-widgets": "^4.4.10",
     "redux": "^4.0.1",
     "redux-saga": "^1.0.0",
     "selectn": "^1.1.2",
