Navigate the timeline by date.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "ajv": "^6.10.0",
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
+    "date-fns": "^2.0.0-beta.2",
     "deep-equal": "^1.0.1",
     "formik": "^1.4.3",
     "general-category": "^1.6.0",
@@ -23,6 +24,7 @@
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.8",
     "react-widgets": "^4.4.10",
+    "react-widgets-date-fns": "^4.0.26",
     "react-widgets-simple-number": "^4.1.22",
     "redux": "^4.0.1",
     "redux-saga": "^1.0.0",
