--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "object-path-immutable": "^3.0.0",
     "prop-types": "^15.6.2",
     "react": "^16.8.6",
+    "react-autosize-textarea": "^7.0.0",
     "react-dom": "^16.8.6",
     "react-loading": "^2.0.3",
     "react-popper": "^1.3.3",
