--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,7 +4,7 @@
   "icons": [
     {
       "src": "favicon.ico",
-      "sizes": "128x128 64x64 32x32",
+      "sizes": "128x128",
       "type": "image/x-icon"
     }
   ],
