--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-widgets-simple-number": "^4.1.22",
     "redux": "^4.0.4",
     "redux-saga": "^1.0.5",
+    "sanitize-html": "^1.20.1",
     "selectn": "^1.1.2",
     "uri-js": "^4.2.2",
     "yup": "^0.27.0"
