--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moera-client-react",
-  "version": "0.1.0",
+  "version": "0.2.0-SNAPSHOT",
   "private": true,
   "homepage": ".",
   "dependencies": {
