--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "ajv": "^6.10.0",
+    "base64-js": "^1.3.1",
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
     "date-fns": "^2.0.0-beta.2",
