--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "@fortawesome/free-brands-svg-icons": "^5.10.2",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "@stomp/stompjs": "^5.4.2",
     "ajv": "^6.10.0",
     "base64-js": "^1.3.1",
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
-    "date-fns": "^2.0.0-beta.2",
+    "date-fns": "^2.7.0",
     "deep-equal": "^1.0.1",
     "formik": "^1.5.8",
     "general-category": "^1.6.0",
@@ -26,7 +27,7 @@
     "react-loading": "^2.0.3",
     "react-popper": "^1.3.3",
     "react-redux": "^7.1.0",
-    "react-scripts": "3.1.1",
+    "react-scripts": "3.2.0",
     "react-widgets": "^4.4.11",
     "react-widgets-date-fns": "^4.0.26",
     "react-widgets-simple-number": "^4.1.22",
