--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@craco/craco": "^5.5.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-brands-svg-icons": "^5.10.2",
+    "@fortawesome/free-regular-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@stomp/stompjs": "^5.4.2",
