--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "redux-saga": "^1.0.5",
     "sanitize-html": "^1.20.1",
     "selectn": "^1.1.2",
+    "twemoji-parser": "^12.1.3",
     "uri-js": "^4.2.2",
     "yup": "^0.27.0"
   },
