--- a/package.json
+++ b/package.json
@@ -16,15 +16,16 @@
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
     "date-fns": "^2.7.0",
-    "deep-equal": "^1.0.1",
     "formik": "^2.1.4",
     "general-category": "^1.6.0",
+    "lodash.debounce": "^4.0.8",
     "moment": "^2.24.0",
     "object-path-immutable": "^3.0.0",
     "prop-types": "^15.6.2",
     "react": "^16.8.6",
     "react-autosize-textarea": "^7.0.0",
     "react-dom": "^16.8.6",
+    "react-fast-compare": "^3.0.1",
     "react-loading": "^2.0.3",
     "react-popper": "^1.3.3",
     "react-redux": "^7.1.0",
