--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "moera-client-react",
-  "version": "0.6.0-SNAPSHOT",
+  "version": "0.6.0",
   "private": true,
-  "homepage": ".",
+  "homepage": "https://github.com/MoeraOrg/moera-client-react",
   "dependencies": {
     "@craco/craco": "^5.6.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
