--- a/package.json
+++ b/package.json
@@ -4,42 +4,43 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
-    "@craco/craco": "^5.6.2",
-    "@fortawesome/fontawesome-svg-core": "^1.2.17",
-    "@fortawesome/free-brands-svg-icons": "^5.10.2",
-    "@fortawesome/free-regular-svg-icons": "^5.11.2",
-    "@fortawesome/free-solid-svg-icons": "^5.8.1",
-    "@fortawesome/react-fontawesome": "^0.1.4",
-    "@stomp/stompjs": "^5.4.2",
-    "ajv": "^6.10.0",
+    "@craco/craco": "^5.6.4",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-brands-svg-icons": "^5.13.0",
+    "@fortawesome/free-regular-svg-icons": "^5.13.0",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
+    "@popperjs/core": "^2.3.3",
+    "@stomp/stompjs": "^5.4.4",
+    "ajv": "^6.12.1",
     "base64-js": "^1.3.1",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.4.1",
     "classnames": "^2.2.6",
-    "date-fns": "^2.7.0",
+    "date-fns": "^2.12.0",
     "formik": "^2.1.4",
     "general-category": "^1.6.0",
     "lodash.debounce": "^4.0.8",
     "moment": "^2.24.0",
-    "object-path-immutable": "^3.0.0",
-    "prop-types": "^15.6.2",
-    "react": "^16.8.6",
+    "object-path-immutable": "^4.1.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.13.1",
     "react-autosize-textarea": "^7.0.0",
-    "react-dom": "^16.8.6",
+    "react-dom": "^16.13.1",
     "react-fast-compare": "^3.0.1",
     "react-loading": "^2.0.3",
-    "react-popper": "^1.3.3",
-    "react-redux": "^7.1.0",
-    "react-scripts": "3.3.0",
-    "react-widgets": "^4.4.11",
-    "react-widgets-date-fns": "^4.0.26",
-    "react-widgets-simple-number": "^4.1.22",
-    "redux": "^4.0.4",
-    "redux-saga": "^1.0.5",
-    "sanitize-html": "^1.20.1",
+    "react-popper": "^2.2.2",
+    "react-redux": "^7.2.0",
+    "react-scripts": "3.4.1",
+    "react-widgets": "^4.5.0",
+    "react-widgets-date-fns": "^4.1.0",
+    "react-widgets-simple-number": "^4.1.24",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
+    "sanitize-html": "^1.23.0",
     "selectn": "^1.1.2",
     "twemoji-parser": "^12.1.3",
     "uri-js": "^4.2.2",
-    "yup": "^0.27.0"
+    "yup": "^0.28.3"
   },
   "scripts": {
     "start": "craco start",
