--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "date-fns": "^2.12.0",
     "formik": "^2.1.4",
     "general-category": "^1.6.0",
+    "lodash.clonedeep": "^4.5.0",
     "lodash.debounce": "^4.0.8",
     "lodash.isfunction": "^3.0.9",
     "moment": "^2.24.0",
