--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moera-client-react",
-  "version": "0.7.1-SNAPSHOT",
+  "version": "0.7.1",
   "private": true,
   "homepage": ".",
   "dependencies": {
