--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "base64-js": "^1.3.1",
     "bootstrap": "^4.4.1",
     "classnames": "^2.2.6",
+    "clipboard-copy": "^3.1.0",
     "date-fns": "^2.12.0",
     "formik": "^2.1.4",
     "general-category": "^1.6.0",
