Use react-lines-ellipsis to crop draft preview text in ComposeDraftSelector.

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-autosize-textarea": "^7.0.0",
     "react-dom": "^16.13.1",
     "react-fast-compare": "^3.0.1",
+    "react-lines-ellipsis": "^0.14.1",
     "react-loading": "^2.0.3",
     "react-popper": "^2.2.2",
     "react-redux": "^7.2.0",
