--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "redux-saga": "^1.1.3",
     "sanitize-html": "^1.23.0",
     "selectn": "^1.1.2",
+    "text-field-edit": "^3.1.0",
     "twemoji-parser": "^12.1.3",
     "uri-js": "^4.2.2",
     "yup": "^0.28.3"
