--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moera-client-react",
-  "version": "0.9.0-RC3",
+  "version": "0.9.0",
   "private": true,
   "homepage": ".",
   "dependencies": {
