--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lodash.debounce": "^4.0.8",
     "lodash.isfunction": "^3.0.9",
     "moment": "^2.24.0",
+    "object-path": "^0.11.5",
     "object-path-immutable": "^4.1.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
