--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "react-loading": "^2.0.3",
     "react-popper": "^2.2.4",
     "react-redux": "^7.2.2",
-    "react-scripts": "3.4.3",
+    "react-scripts": "4.0.1",
     "react-widgets": "^4.6.1",
     "react-widgets-date-fns": "^4.1.2",
     "react-widgets-simple-number": "^4.1.26",
@@ -54,7 +54,10 @@
     "eject": "craco eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "rules": {
+      "import/no-anonymous-default-export": "off"
+    }
   },
   "browserslist": [
     ">0.2%",
