Higher-resolution icons.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,6 +6,16 @@
       "src": "pics/icon-o-128.png",
       "sizes": "128x128",
       "type": "image/png"
+    },
+    {
+      "src": "pics/icon-o-256.png",
+      "sizes": "256x256",
+      "type": "image/png"
+    },
+    {
+      "src": "pics/icon-o-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ],
   "start_url": "https://web.moera.org/",
