Use favicon for very small resolutions.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,6 +4,11 @@
   "name": "Moera Social Network Client",
   "icons": [
     {
+      "src": "favicon.ico",
+      "sizes": "64x64 32x32 24x24 16x16",
+      "type": "image/x-icon"
+    },
+    {
       "src": "pics/icon-o-128.png",
       "sizes": "128x128",
       "type": "image/png"
