Better use black theme_color.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -27,6 +27,6 @@
   "categories": ["social"],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#f8fc30",
+  "theme_color": "#000000",
   "background_color": "#ffffff"
 }
