--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@popperjs/core": "^2.5.4",
     "@stomp/stompjs": "^6.0.0",
-    "ajv": "^6.12.6",
+    "ajv": "^7.0.3",
+    "ajv-formats": "^1.5.1",
     "base64-js": "^1.5.1",
     "bootstrap": "^4.6.0",
     "classnames": "^2.2.6",
