--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "sanitize-html": "^2.3.0",
+    "scroll-into-view-if-needed": "^2.2.26",
     "selectn": "^1.1.2",
     "text-field-edit": "^3.1.0",
     "twemoji-parser": "^13.0.0",
