--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-widgets-simple-number": "^4.1.26",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
+    "reselect": "^4.0.0",
     "sanitize-html": "^2.3.0",
     "scroll-into-view-if-needed": "^2.2.26",
     "selectn": "^1.1.2",
