--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "escape-string-regexp": "^4.0.0",
     "formik": "^2.2.6",
     "general-category": "^1.6.0",
+    "katex": "^0.12.0",
     "lodash.clonedeep": "^4.5.0",
     "lodash.debounce": "^4.0.8",
     "lodash.isfunction": "^3.0.9",
