--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moera-client-react",
-  "version": "0.11.0-beta2",
+  "version": "0.11.0-SNAPSHOT",
   "private": true,
   "homepage": ".",
   "dependencies": {
@@ -10,15 +10,15 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "@popperjs/core": "^2.5.4",
+    "@popperjs/core": "^2.9.1",
     "@stomp/stompjs": "^6.0.0",
-    "ajv": "^7.0.3",
+    "ajv": "^7.2.1",
     "ajv-formats": "^1.5.1",
     "base64-js": "^1.5.1",
     "bootstrap": "^4.6.0",
     "classnames": "^2.2.6",
     "clipboard-copy": "^4.0.1",
-    "date-fns": "^2.16.1",
+    "date-fns": "^2.19.0",
     "escape-string-regexp": "^4.0.0",
     "formik": "^2.2.6",
     "general-category": "^1.6.0",
