--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-popper": "^2.2.4",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.3",
+    "react-share": "^4.4.0",
     "react-widgets": "^4.6.1",
     "react-widgets-date-fns": "^4.1.2",
     "react-widgets-simple-number": "^4.1.26",
