--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-autosize-textarea": "^7.1.0",
+    "react-avatar-editor": "^11.1.0",
     "react-dom": "^17.0.1",
     "react-fast-compare": "^3.2.0",
     "react-lines-ellipsis": "^0.14.1",
