--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-autosize-textarea": "^7.1.0",
     "react-avatar-editor": "^11.1.0",
     "react-dom": "^17.0.1",
+    "react-dropzone": "^11.3.2",
     "react-fast-compare": "^3.2.0",
     "react-lines-ellipsis": "^0.14.1",
     "react-loading": "^2.0.3",
