--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "homepage": ".",
   "dependencies": {
     "@craco/craco": "^6.1.1",
+    "@dnd-kit/core": "^3.0.2",
+    "@dnd-kit/modifiers": "^2.0.0",
+    "@dnd-kit/sortable": "^3.0.1",
+    "@dnd-kit/utilities": "^2.0.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-brands-svg-icons": "^5.15.2",
     "@fortawesome/free-regular-svg-icons": "^5.15.2",
