--- a/package.json
+++ b/package.json
@@ -4,61 +4,64 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
-    "@craco/craco": "^6.1.1",
+    "@craco/craco": "^6.1.2",
     "@dnd-kit/core": "^3.0.2",
     "@dnd-kit/modifiers": "^2.0.0",
     "@dnd-kit/sortable": "^3.0.1",
     "@dnd-kit/utilities": "^2.0.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.34",
-    "@fortawesome/free-brands-svg-icons": "^5.15.2",
-    "@fortawesome/free-regular-svg-icons": "^5.15.2",
-    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/free-regular-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@popperjs/core": "^2.9.2",
-    "@stomp/stompjs": "^6.0.0",
+    "@stomp/stompjs": "^6.1.0",
     "ajv": "^7.2.1",
     "ajv-formats": "^1.5.1",
     "base64-js": "^1.5.1",
     "bootstrap": "^4.6.0",
-    "classnames": "^2.2.6",
+    "classnames": "^2.3.1",
     "clipboard-copy": "^4.0.1",
-    "date-fns": "^2.19.0",
+    "date-fns": "^2.21.2",
     "escape-string-regexp": "^4.0.0",
     "formik": "^2.2.6",
     "general-category": "^1.6.0",
-    "html-entities": "^2.1.1",
-    "katex": "^0.13.0",
+    "html-entities": "^2.3.2",
+    "katex": "^0.13.8",
     "lodash.clonedeep": "^4.5.0",
     "lodash.debounce": "^4.0.8",
     "lodash.isfunction": "^3.0.9",
     "object-path": "^0.11.5",
     "object-path-immutable": "^4.1.1",
     "prop-types": "^15.7.2",
-    "react": "^17.0.1",
+    "react": "^17.0.2",
     "react-autosize-textarea": "^7.1.0",
     "react-avatar-editor": "^11.1.0",
-    "react-dom": "^17.0.1",
+    "react-dom": "^17.0.2",
     "react-dropzone": "^11.3.2",
     "react-fast-compare": "^3.2.0",
     "react-lines-ellipsis": "^0.14.1",
     "react-loading": "^2.0.3",
     "react-popper": "^2.2.5",
-    "react-redux": "^7.2.2",
+    "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
     "react-share": "^4.4.0",
     "react-widgets": "^4.6.1",
     "react-widgets-date-fns": "^4.1.2",
     "react-widgets-simple-number": "^4.1.26",
-    "redux": "^4.0.5",
+    "redux": "^4.1.0",
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
-    "sanitize-html": "^2.3.0",
-    "scroll-into-view-if-needed": "^2.2.26",
+    "sanitize-html": "^2.3.3",
+    "scroll-into-view-if-needed": "^2.2.28",
     "selectn": "^1.1.2",
     "text-field-edit": "^3.1.0",
     "twemoji-parser": "^13.0.0",
     "uri-js": "^4.4.1",
-    "yup": "^0.32.8"
+    "yup": "^0.32.9"
+  },
+  "resolutions": {
+    "react-scripts/postcss-preset-env/postcss-custom-properties": "^11.0.0"
   },
   "scripts": {
     "start": "craco start",
