--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@popperjs/core": "^2.9.2",
     "@stomp/stompjs": "^6.1.0",
+    "@types/jest": "^26.0.23",
+    "@types/node": "^16.0.0",
+    "@types/react": "^17.0.13",
+    "@types/react-dom": "^17.0.8",
     "ajv": "^8.2.0",
     "ajv-formats": "^2.1.0",
     "base64-js": "^1.5.1",
@@ -57,6 +61,7 @@
     "selectn": "^1.1.2",
     "text-field-edit": "^3.1.0",
     "twemoji-parser": "^13.0.0",
+    "typescript": "^4.3.5",
     "uri-js": "^4.4.1",
     "yup": "^0.32.9"
   },
