--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "selectn": "^1.1.2",
     "text-field-edit": "^3.1.0",
     "twemoji-parser": "^13.1.0",
+    "typed-redux-saga": "^1.3.1",
     "typescript": "^4.3.5",
     "uri-js": "^4.4.1",
     "yup": "^0.32.9"
