--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@stomp/stompjs": "^6.1.0",
     "@types/jest": "^26.0.23",
     "@types/lodash.clonedeep": "^4.5.6",
+    "@types/lodash.debounce": "^4.0.6",
     "@types/node": "^16.0.0",
     "@types/react": "^17.0.13",
     "@types/react-dom": "^17.0.8",
