--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/jest": "^26.0.23",
     "@types/lodash.clonedeep": "^4.5.6",
     "@types/lodash.debounce": "^4.0.6",
+    "@types/lodash.isfunction": "^3.0.6",
     "@types/node": "^16.0.0",
     "@types/react": "^17.0.13",
     "@types/react-dom": "^17.0.8",
