--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/lodash.isfunction": "^3.0.6",
     "@types/node": "^16.0.0",
     "@types/react": "^17.0.13",
+    "@types/react-datepicker": "^4.1.3",
     "@types/react-dom": "^17.0.8",
     "@types/sanitize-html": "^2.3.2",
     "@types/selectn": "^1.1.0",
@@ -47,6 +48,7 @@
     "react": "^17.0.2",
     "react-autosize-textarea": "^7.1.0",
     "react-avatar-editor": "^11.1.0",
+    "react-datepicker": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.3.4",
     "react-fast-compare": "^3.2.0",
