--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/lodash.isfunction": "^3.0.6",
     "@types/node": "^16.0.0",
     "@types/react": "^17.0.13",
+    "@types/react-avatar-editor": "^10.3.6",
     "@types/react-datepicker": "^4.1.3",
     "@types/react-dom": "^17.0.8",
     "@types/sanitize-html": "^2.3.2",
