--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/lodash.clonedeep": "^4.5.6",
     "@types/lodash.debounce": "^4.0.6",
     "@types/node": "^16.0.0",
+    "@types/object-path": "^0.11.1",
     "@types/react": "^17.0.13",
     "@types/react-avatar-editor": "^10.3.6",
     "@types/react-datepicker": "^4.1.3",
