--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.3.4",
     "react-fast-compare": "^3.2.0",
+    "react-image-lightbox": "^5.1.4",
     "react-lines-ellipsis": "^0.15.0",
     "react-loading": "^2.0.3",
     "react-popper": "^2.2.5",
