--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ajv-formats": "^2.1.1",
     "base64-js": "^1.5.1",
     "bootstrap": "^5.1.3",
+    "browser-image-compression": "^1.0.17",
     "classnames": "^2.3.1",
     "clipboard-copy": "^4.0.1",
     "date-fns": "^2.25.0",
