--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@popperjs/core": "^2.11.0",
+    "@seznam/compose-react-refs": "^1.0.6",
     "@stomp/stompjs": "^6.1.2",
     "@types/jest": "^27.0.3",
     "@types/lodash.clonedeep": "^4.5.6",
