--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-lines-ellipsis": "^0.15.0",
     "react-loading": "^2.0.3",
     "react-popper": "^2.2.5",
+    "react-qr-code": "^2.0.3",
     "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
     "react-share": "^4.4.0",
