--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "@types/twemoji-parser": "^13.1.1",
     "ajv": "^8.8.2",
     "ajv-formats": "^2.1.1",
+    "assert": "^2.0.0",
     "base64-js": "^1.5.1",
     "bootstrap": "^5.1.3",
     "browser-image-compression": "^1.0.17",
+    "buffer": "^6.0.3",
     "classnames": "^2.3.1",
     "clipboard-copy": "^4.0.1",
     "date-fns": "^2.27.0",
@@ -44,6 +46,7 @@
     "lodash.debounce": "^4.0.8",
     "object-path": "^0.11.8",
     "object-path-immutable": "^4.1.2",
+    "process": "^0.11.10",
     "react": "^17.0.2",
     "react-autosize-textarea": "^7.1.0",
     "react-avatar-editor": "^12.0.0",
@@ -57,7 +60,7 @@
     "react-popper": "^2.2.5",
     "react-qr-code": "^2.0.3",
     "react-redux": "^7.2.6",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.0",
     "react-share": "^4.4.0",
     "react-widgets": "^5.5.1",
     "react-widgets-date-fns": "^5.0.11",
