--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "reselect": "^4.1.5",
     "sanitize-html": "^2.6.1",
     "scroll-into-view-if-needed": "^2.2.28",
+    "source-map-explorer": "^2.5.2",
     "text-field-edit": "^3.1.1",
     "twemoji-parser": "^13.1.0",
     "typed-redux-saga": "^1.3.1",
@@ -85,7 +86,8 @@
     "build": "./release",
     "test": "craco test",
     "eject": "craco eject",
-    "rev": "./build-number -j > src/build-number.js"
+    "rev": "./build-number -j > src/build-number.js",
+    "analyze": "source-map-explorer 'build/static/js/*.js'"
   },
   "eslintConfig": {
     "extends": "react-app",
