--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "react-popper": "^2.2.5",
     "react-qr-code": "^2.0.3",
     "react-redux": "^7.2.6",
-    "react-scripts": "5.0.0",
+    "react-scripts": "4.0.3",
     "react-share": "^4.4.0",
     "react-widgets": "^5.6.1",
     "react-widgets-date-fns": "^5.0.13",
@@ -76,6 +76,9 @@
     "typescript": "^4.5.5",
     "uri-js": "^4.4.1",
     "yup": "^0.32.11"
+  },
+  "resolutions": {
+    "react-scripts/postcss-preset-env/postcss-custom-properties": "^11.0.0"
   },
   "scripts": {
     "start": "craco start",
