--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
-    "@craco/craco": "^6.4.3",
     "@dnd-kit/core": "^5.0.1",
     "@dnd-kit/modifiers": "^5.0.0",
     "@dnd-kit/sortable": "^6.0.0",
@@ -60,7 +59,7 @@
     "react-popper": "^2.2.5",
     "react-qr-code": "^2.0.3",
     "react-redux": "^7.2.6",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.0",
     "react-share": "^4.4.0",
     "react-widgets": "^5.6.1",
     "react-widgets-date-fns": "^5.0.13",
@@ -68,23 +67,22 @@
     "redux": "^4.1.2",
     "redux-saga": "^1.1.3",
     "reselect": "^4.1.5",
-    "sanitize-html": "^2.6.1",
+    "sanitize-html": "^2.7.0",
     "scroll-into-view-if-needed": "^2.2.28",
     "source-map-explorer": "^2.5.2",
     "twemoji-parser": "^13.1.0",
     "typed-redux-saga": "^1.3.1",
     "typescript": "^4.5.5",
     "uri-js": "^4.4.1",
-    "yup": "^0.32.11"
-  },
-  "resolutions": {
-    "react-scripts/postcss-preset-env/postcss-custom-properties": "^11.0.0"
+    "yup": "^0.32.11",
+    "stream-browserify": "^3.0.0",
+    "react-app-rewired": "^2.2.1"
   },
   "scripts": {
-    "start": "craco start",
+    "start": "react-app-rewired start",
     "build": "./release",
-    "test": "craco test",
-    "eject": "craco eject",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject",
     "rev": "./build-number -j > src/build-number.js",
     "analyze": "source-map-explorer 'build/static/js/*.js'"
   },
