--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "object-path-immutable": "^4.1.2",
     "process": "^0.11.10",
     "react": "^17.0.2",
+    "react-app-rewired": "^2.2.1",
     "react-autosize-textarea": "^7.1.0",
     "react-avatar-editor": "^12.0.0",
     "react-datepicker": "^4.7.0",
@@ -69,14 +70,14 @@
     "reselect": "^4.1.5",
     "sanitize-html": "^2.7.0",
     "scroll-into-view-if-needed": "^2.2.29",
+    "shorten-url": "^1.0.0",
     "source-map-explorer": "^2.5.2",
+    "stream-browserify": "^3.0.0",
     "twemoji-parser": "^14.0.0",
     "typed-redux-saga": "^1.4.0",
     "typescript": "^4.5.5",
     "uri-js": "^4.4.1",
-    "yup": "^0.32.11",
-    "stream-browserify": "^3.0.0",
-    "react-app-rewired": "^2.2.1"
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-app-rewired start",
