Basic react-i18n infrastructure.

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "formik": "^2.2.9",
     "general-category": "^1.6.0",
     "html-entities": "^2.3.3",
+    "i18next": "^21.9.1",
     "katex": "^0.16.0",
     "lodash.clonedeep": "^4.5.0",
     "lodash.debounce": "^4.0.8",
@@ -54,6 +55,7 @@
     "react-dom": "^17.0.2",
     "react-dropzone": "^12.0.4",
     "react-fast-compare": "^3.2.0",
+    "react-i18next": "^11.18.6",
     "react-image-lightbox": "^5.1.4",
     "react-lines-ellipsis": "^0.15.0",
     "react-loading": "^2.0.3",
