--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@popperjs/core": "^2.11.6",
     "@seznam/compose-react-refs": "^1.0.6",
     "@stomp/stompjs": "^6.1.2",
+    "@types/autosize": "^4.0.1",
     "@types/jest": "^28.1.6",
     "@types/lodash.clonedeep": "^4.5.7",
     "@types/lodash.debounce": "^4.0.7",
@@ -29,6 +30,7 @@
     "ajv": "^8.10.0",
     "ajv-formats": "^2.1.1",
     "assert": "^2.0.0",
+    "autosize": "^5.0.1",
     "base64-js": "^1.5.1",
     "bootstrap": "^5.1.3",
     "browser-image-compression": "^1.0.17",
@@ -51,7 +53,6 @@
     "process": "^0.11.10",
     "react": "^17.0.2",
     "react-app-rewired": "^2.2.1",
-    "react-autosize-textarea": "^7.1.0",
     "react-avatar-editor": "^12.0.0",
     "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
