--- a/package.json
+++ b/package.json
@@ -84,10 +84,10 @@
     "yup": "^1.2.0"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "./release",
-    "test": "react-app-rewired test",
-    "eject": "react-app-rewired eject",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
     "rev": "./build-number -j > src/build-number.js",
     "analyze": "source-map-explorer 'build/static/js/*.js'"
   },
