--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
+    "@babel/core": "^7.16.0",
     "@dnd-kit/core": "^6.0.8",
     "@dnd-kit/modifiers": "^6.0.1",
     "@dnd-kit/sortable": "^7.0.2",
@@ -13,9 +14,11 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@popperjs/core": "^2.11.8",
     "@seznam/compose-react-refs": "^1.0.6",
     "@stomp/stompjs": "^7.0.0",
+    "@svgr/webpack": "^5.5.0",
     "@types/autosize": "^4.0.1",
     "@types/jest": "^29.5.4",
     "@types/lodash.clonedeep": "^4.5.7",
@@ -30,30 +33,61 @@
     "ajv-formats": "^2.1.1",
     "assert": "^2.0.0",
     "autosize": "^6.0.1",
+    "babel-jest": "^27.4.2",
+    "babel-loader": "^8.2.3",
+    "babel-plugin-named-asset-import": "^0.3.8",
+    "babel-preset-react-app": "^10.0.1",
     "base64-js": "^1.5.1",
+    "bfj": "^7.0.2",
     "bootstrap": "^5.3.1",
     "browser-image-compression": "^2.0.2",
+    "browserslist": "^4.18.1",
     "buffer": "^6.0.3",
+    "camelcase": "^6.2.1",
+    "case-sensitive-paths-webpack-plugin": "^2.4.0",
     "classnames": "^2.3.2",
     "clipboard-copy": "^4.0.1",
+    "css-loader": "^6.5.1",
+    "css-minimizer-webpack-plugin": "^3.2.0",
     "date-fns": "^2.30.0",
+    "dotenv": "^10.0.0",
+    "dotenv-expand": "^5.1.0",
     "escape-string-regexp": "^5.0.0",
+    "eslint": "^8.3.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-webpack-plugin": "^3.1.1",
+    "file-loader": "^6.2.0",
     "formik": "^2.4.3",
+    "fs-extra": "^10.0.0",
     "general-category": "^1.6.0",
     "html-entities": "^2.4.0",
+    "html-webpack-plugin": "^5.5.0",
     "i18next": "^23.4.6",
     "i18next-icu": "^2.3.0",
+    "identity-obj-proxy": "^3.0.0",
     "intl-messageformat": "^10.5.0",
+    "jest": "^27.4.3",
+    "jest-resolve": "^27.4.2",
+    "jest-watch-typeahead": "^1.0.0",
     "katex": "^0.16.8",
     "lodash.clonedeep": "^4.5.0",
     "lodash.debounce": "^4.0.8",
+    "mini-css-extract-plugin": "^2.4.5",
     "object-path": "^0.11.8",
     "object-path-immutable": "^4.1.2",
+    "postcss": "^8.4.4",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-loader": "^6.2.1",
+    "postcss-normalize": "^10.0.1",
+    "postcss-preset-env": "^7.0.1",
     "process": "^0.11.10",
+    "prompts": "^2.4.2",
     "react": "^18.2.0",
+    "react-app-polyfill": "^3.0.0",
     "react-app-rewired": "^2.2.1",
     "react-avatar-editor": "^13.0.0",
     "react-datepicker": "^4.16.0",
+    "react-dev-utils": "^12.0.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-fast-compare": "^3.2.2",
@@ -64,7 +98,7 @@
     "react-popper": "^2.3.0",
     "react-qr-code": "^2.0.12",
     "react-redux": "^8.1.2",
-    "react-scripts": "5.0.1",
+    "react-refresh": "^0.11.0",
     "react-share": "^4.4.1",
     "react-widgets": "^5.8.4",
     "react-widgets-date-fns": "^5.0.20",
@@ -72,22 +106,33 @@
     "redux": "^4.2.1",
     "redux-saga": "^1.2.3",
     "reselect": "^4.1.8",
+    "resolve": "^1.20.0",
+    "resolve-url-loader": "^4.0.0",
     "sanitize-html": "^2.11.0",
+    "sass-loader": "^12.3.0",
     "scroll-into-view-if-needed": "^3.0.10",
+    "semver": "^7.3.5",
     "shorten-url": "^1.1.0",
     "source-map-explorer": "^2.5.3",
+    "source-map-loader": "^3.0.0",
     "stream-browserify": "^3.0.0",
+    "style-loader": "^3.3.1",
+    "tailwindcss": "^3.0.2",
+    "terser-webpack-plugin": "^5.2.5",
     "twemoji-parser": "^14.0.0",
     "typed-redux-saga": "^1.5.0",
     "typescript": "^4.7.4",
     "uri-js": "^4.4.1",
+    "webpack": "^5.64.4",
+    "webpack-dev-server": "^4.6.0",
+    "webpack-manifest-plugin": "^4.0.2",
+    "workbox-webpack-plugin": "^6.4.1",
     "yup": "^1.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "node scripts/start.js",
+    "build": "node scripts/build.js",
+    "test": "node scripts/test.js",
     "rev": "./build-number -j > src/build-number.js",
     "analyze": "source-map-explorer 'build/static/js/*.js'"
   },
@@ -102,5 +147,61 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "jest": {
+    "roots": [
+      "<rootDir>/src"
+    ],
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx,ts,tsx}",
+      "!src/**/*.d.ts"
+    ],
+    "setupFiles": [
+      "react-app-polyfill/jsdom"
+    ],
+    "setupFilesAfterEnv": [],
+    "testMatch": [
+      "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
+      "<rootDir>/src/**/*.{spec,test}.{js,jsx,ts,tsx}"
+    ],
+    "testEnvironment": "jsdom",
+    "transform": {
+      "^.+\\.(js|jsx|mjs|cjs|ts|tsx)$": "<rootDir>/config/jest/babelTransform.js",
+      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
+      "^(?!.*\\.(js|jsx|mjs|cjs|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
+    },
+    "transformIgnorePatterns": [
+      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs|cjs|ts|tsx)$",
+      "^.+\\.module\\.(css|sass|scss)$"
+    ],
+    "modulePaths": [
+      "/home/balu/moera/moera-client-react/src"
+    ],
+    "moduleNameMapper": {
+      "^react-native$": "react-native-web",
+      "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
+    },
+    "moduleFileExtensions": [
+      "web.js",
+      "js",
+      "web.ts",
+      "ts",
+      "web.tsx",
+      "tsx",
+      "json",
+      "web.jsx",
+      "jsx",
+      "node"
+    ],
+    "watchPlugins": [
+      "jest-watch-typeahead/filename",
+      "jest-watch-typeahead/testname"
+    ],
+    "resetMocks": true
+  },
+  "babel": {
+    "presets": [
+      "react-app"
+    ]
+  }
 }
