--- a/package.json
+++ b/package.json
@@ -130,7 +130,7 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
+    "build": "./release",
     "test": "node scripts/test.js",
     "rev": "./build-number -j > src/build-number.js",
     "analyze": "source-map-explorer 'build/static/js/*.js'"
