Fix ESLint error on babel-preset-react-app
See https://stackoverflow.com/a/72479860

--- a/package.json
+++ b/package.json
@@ -137,6 +137,7 @@
   },
   "eslintConfig": {
     "extends": "react-app",
+    "parser": "@typescript-eslint/parser",
     "rules": {
       "import/no-anonymous-default-export": "off"
     }
