--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
-    "@babel/core": "^7.16.0",
+    "@babel/core": "^7.23.3",
+    "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
     "@dnd-kit/core": "^6.0.8",
     "@dnd-kit/modifiers": "^6.0.1",
     "@dnd-kit/sortable": "^7.0.2",
@@ -33,10 +35,9 @@
     "ajv-formats": "^2.1.1",
     "assert": "^2.0.0",
     "autosize": "^6.0.1",
-    "babel-jest": "^27.4.2",
-    "babel-loader": "^8.2.3",
+    "babel-jest": "^29.7.0",
+    "babel-loader": "^9.1.3",
     "babel-plugin-named-asset-import": "^0.3.8",
-    "babel-preset-react-app": "^10.0.1",
     "base64-js": "^1.5.1",
     "bfj": "^7.0.2",
     "bootstrap": "^5.3.1",
@@ -118,6 +119,7 @@
     "style-loader": "^3.3.1",
     "tailwindcss": "^3.0.2",
     "terser-webpack-plugin": "^5.2.5",
+    "ts-loader": "^9.5.0",
     "twemoji-parser": "^14.0.0",
     "typed-redux-saga": "^1.5.0",
     "typescript": "^4.7.4",
@@ -201,7 +203,7 @@
   },
   "babel": {
     "presets": [
-      "react-app"
+      "@babel/preset-react"
     ]
   }
 }
