--- a/package.json
+++ b/package.json
@@ -138,7 +138,7 @@
     "build": "./release",
     "test": "node scripts/test.js",
     "rev": "./build-number -j > src/build-number.js",
-    "analyze": "source-map-explorer 'build/static/js/*.js'"
+    "analyze": "source-map-explorer --gzip 'build/static/js/*.js'"
   },
   "eslintConfig": {
     "extends": "react-app",
