Use absolute paths for all assets
This allows loading the app correctly, regardless of
the location part of the URL.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "moera-client-react",
   "version": "0.15.0-SNAPSHOT",
   "private": true,
-  "homepage": ".",
+  "homepage": "/",
   "dependencies": {
     "@babel/core": "^7.23.3",
     "@babel/plugin-syntax-flow": "^7.23.3",
