--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,12 +4,12 @@
   "name": "Moera Social Network Client",
   "icons": [
     {
-      "src": "pics/icon-o-192.png",
+      "src": "/pics/icon-o-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "pics/icon-o-512.png",
+      "src": "/pics/icon-o-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
