Integration of Quill editor.

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/jest": "^29.5.4",
     "@types/lodash.clonedeep": "^4.5.7",
     "@types/object-path": "^0.11.1",
+    "@types/quill": "^2.0.14",
     "@types/react-avatar-editor": "^13.0.0",
     "@types/react-datepicker": "^4.15.0",
     "@types/react-dom": "^18.2.7",
@@ -86,6 +87,7 @@
     "process": "^0.11.10",
     "prompts": "^2.4.2",
     "prop-types": "^15.8.1",
+    "quill": "^2.0.2",
     "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
     "react-avatar-editor": "^13.0.0",
@@ -100,6 +102,7 @@
     "react-loading": "^2.0.3",
     "react-popper": "^2.3.0",
     "react-qr-code": "^2.0.12",
+    "react-quilljs": "^2.0.4",
     "react-redux": "^8.1.2",
     "react-refresh": "^0.14.0",
     "react-share": "^4.4.1",
