Emoji selector in the visual editor.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@dnd-kit/modifiers": "^6.0.1",
     "@dnd-kit/sortable": "^7.0.2",
     "@dnd-kit/utilities": "^3.2.1",
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
@@ -27,6 +29,7 @@
     "classnames": "^2.3.2",
     "clipboard-copy": "^4.0.1",
     "date-fns": "^2.30.0",
+    "emoji-mart": "^5.6.0",
     "escape-string-regexp": "^5.0.0",
     "formik": "^2.4.3",
     "general-category": "^1.6.0",
@@ -85,6 +88,7 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
     "@svgr/webpack": "^8.1.0",
     "@types/autosize": "^4.0.1",
+    "@types/emoji-mart": "^3.0.14",
     "@types/jest": "^29.5.4",
     "@types/lodash.clonedeep": "^4.5.7",
     "@types/object-path": "^0.11.1",
