Suppress deprecation warnings when compiling Bootstrap SASS.

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "assert": "^2.1.0",
     "autosize": "^6.0.1",
     "base64-js": "^1.5.1",
-    "bootstrap": "^5.3.1",
+    "bootstrap": "^5.3.3",
     "browser-image-compression": "^2.0.2",
     "buffer": "^6.0.3",
     "classnames": "^2.3.2",
@@ -133,7 +133,7 @@
     "react-refresh": "^0.14.0",
     "resolve": "^1.22.8",
     "resolve-url-loader": "^5.0.0",
-    "sass": "^1.82.0",
+    "sass": "~1.71.0",
     "sass-loader": "^13.3.2",
     "semver": "^7.3.5",
     "source-map-explorer": "^2.5.3",
