Use is-hotkey library to make matching hotkeys simpler.

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "i18next": "^23.4.6",
     "i18next-icu": "^2.3.0",
     "intl-messageformat": "^10.5.0",
+    "is-hotkey": "^0.2.0",
     "katex": "^0.16.10",
     "lodash.clonedeep": "^4.5.0",
     "object-path": "^0.11.8",
@@ -90,6 +91,7 @@
     "@svgr/webpack": "^8.1.0",
     "@types/autosize": "^4.0.1",
     "@types/emoji-mart": "^3.0.14",
+    "@types/is-hotkey": "^0.1.10",
     "@types/jest": "^29.5.4",
     "@types/katex": "^0.16.7",
     "@types/lodash.clonedeep": "^4.5.7",
