Convert Markdown -> HTML when switching between text formats in the rich text editor. Not all syntax is supported.

--- a/package.json
+++ b/package.json
@@ -40,6 +40,11 @@
     "is-hotkey": "^0.2.0",
     "katex": "^0.16.10",
     "lodash.clonedeep": "^4.5.0",
+    "markdown-it": "^14.1.0",
+    "markdown-it-deflist": "^3.0.0",
+    "markdown-it-emoji": "^3.0.0",
+    "markdown-it-sub": "^2.0.0",
+    "markdown-it-sup": "^2.0.0",
     "object-path": "^0.11.8",
     "object-path-immutable": "^4.1.2",
     "process": "^0.11.10",
@@ -96,6 +101,8 @@
     "@types/jest": "^29.5.4",
     "@types/katex": "^0.16.7",
     "@types/lodash.clonedeep": "^4.5.7",
+    "@types/markdown-it": "^14.1.2",
+    "@types/markdown-it-emoji": "^3.0.1",
     "@types/object-path": "^0.11.1",
     "@types/react-avatar-editor": "^13.0.0",
     "@types/react-datepicker": "^4.15.0",
