Added CSS linter (stylelint) and fixed errors.

--- a/package.json
+++ b/package.json
@@ -151,6 +151,9 @@
     "source-map-explorer": "^2.5.3",
     "source-map-loader": "^4.0.1",
     "style-loader": "^3.3.3",
+    "stylelint": "^16.23.1",
+    "stylelint-config-standard": "^39.0.0",
+    "stylelint-webpack-plugin": "^5.0.1",
     "svg-inline-loader": "^0.8.2",
     "terser-webpack-plugin": "^5.3.9",
     "ts-loader": "^9.5.0",
