Replace `react-popper` with `@floating-ui/react`.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@dnd-kit/utilities": "^3.2.1",
     "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
-    "@popperjs/core": "^2.11.8",
+    "@floating-ui/react": "^0.27.16",
     "@seznam/compose-react-refs": "^1.0.6",
     "@stomp/stompjs": "^7.0.0",
     "@use-gesture/react": "^10.3.1",
@@ -57,7 +57,6 @@
     "react-image-lightbox": "^5.1.4",
     "react-lines-ellipsis": "^0.15.3",
     "react-loading": "^2.0.3",
-    "react-popper": "^2.3.0",
     "react-qr-code": "^2.0.12",
     "react-redux": "^8.1.2",
     "react-share": "^5.2.2",
