Avatar's border-radius should look good regardless of the avatar's size.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moera-client-react",
-  "version": "0.17.17",
+  "version": "0.17.18-SNAPSHOT",
   "private": true,
   "homepage": "/",
   "dependencies": {
